feat: Eliminación de sistema
